# SmithyEngine

./: .gitignore  CMakeLists.txt  README.md  build-windows.sh  build.sh  build_all.sh  clean.sh  run.sh  run_audio.sh  test.sh
engine/: Audio.hpp  AudioLoader.hpp  AudioManager.hpp  AudioPlayer.hpp  CollisionRectangle.hpp  Entity.hpp  EntityManager.hpp  GameMeta.hpp  Input.hpp  Rectangle.hpp  Renderer.hpp  Scene.hpp  Text.hpp  Vector2.hpp
examples/audio_test/: main.cpp
examples/basic_game/: main.cpp
examples/basic_game/scenes/: WinScene.hpp
examples/pong/: Game.hpp
examples/pong/entities/: Ball.hpp  Paddle.hpp
examples/pong/scenes/: GameScene.hpp
examples/text_test/: main.cpp
src/: Game.cpp  Game.hpp
src/engine/: Camera.hpp  CollisionManager.hpp  Entity.hpp  EntityManager.hpp  SceneManager.hpp  Sprite.hpp  TextureLoader.hpp
src/entities/: Grid.hpp  Player.hpp  Trigger.hpp
src/scenes/: GameScene.hpp
tests/: test_Camera.cpp  test_CollisionRectangle.cpp  test_Input.cpp  test_Vector2.cpp
